--- a/src/app/uploader/uploader.component.html
+++ b/src/app/uploader/uploader.component.html
@@ -1,41 +1,71 @@
-<div class="dropzone" 
-     dropzone
-     (hovered)="toggleHover($event)"
-     (dropped)="onDrop($event)"
-     [class.hovering]="isHovering">
+<div class="dropzone" dropzone (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
 
 
 
 
 
-     <h3>AngularFire Drop Zone</h3>
-     <p>Drag and Drop a File</p>
-     <div class="file">
-        <label class="file-label">
+  <h3>AngularFire Drop Zone</h3>
+  <p>Drag and Drop a File</p>
+  <div class="file">
+    <label class="file-label">
 
 
 
 
-        <input class="file-input" type="file" (change)="onDrop($event.target.files)" multiple>
+      <input class="file-input" type="file" (change)="onDrop($event.target.files)" multiple>
 
 
 
 
-          <span class="file-cta">
-            <span class="file-icon">
-              <i class="fa fa-upload"></i>
-            </span>
-            <span class="file-label">
-              or choose a file…
-            </span>
-          </span>
-        </label>
-      </div>
+      <span class="file-cta">
+        <span class="file-icon">
+          <i class="fa fa-upload"></i>
+        </span>
+        <span class="file-label">
+          or choose a file…
+        </span>
+      </span>
+    </label>
+  </div>
 </div>
 
 <h3>Uploads</h3>
 
 <div *ngFor="let file of files">
-  <upload-task [file]="file"></upload-task>
-</div>
 
+  {{file.name}}
+
+  <div *ngIf="percentage | async as pct">
+
+    <progress class="progress is-info" [value]="pct" max="100">
+    </progress>
+
+    {{ pct | number }}%
+
+  </div>
+
+
+
+  <div *ngIf="(snapshot | async) as snap">
+
+    {{ snap.bytesTransferred }} of {{ snap.totalBytes }}
+
+
+    <div *ngIf="downloadURL as url">
+      <h3>Results!</h3>
+      <img [src]="url"><br>
+      <a [href]="url" target="_blank" rel="noopener">Download Me!</a>
+    </div>
+    <hr>
+
+
+
+
+
+
+    <button (click)="task.pause()" class="button is-warning" [disabled]="!isActive(snap)">Pause</button>
+    <button (click)="task.cancel()" class="button is-danger" [disabled]="!isActive(snap)">Cancel</button>
+    <button (click)="task.resume()" class="button is-info" [disabled]="!(snap?.state === 'paused')">Resume</button>
+  </div>
+  <!--<upload-task [file]="file"></upload-task>  -->
+</div>
